assets/styles/index.scss
$theme-colors: (
  "primary": #2cccbc,
  "secondary": #abe798,
);

@import "~bootstrap/scss/bootstrap";
/* width */
::-webkit-scrollbar {
  width: 10px;
}
// scroller
/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: #13dcc8;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #03ffe6;
}
.dropdown-toggle {
  margin-top: -15px;
}

body {
  background: url("public/1390893.jpg");
  // background-repeat: no-repeat;
  background-size: cover;
  margin-left: auto;
  margin-right: auto;
  font-family: Tahoma;
  max-width: 100vw;
  // max-height: 100vh;
  // overflow: scroll;
  color: white;
}

// .list-group-item {
// background-color: red;

#goal-border {
  border: 1px solid rgba(255, 255, 255, 0.2);
  width: 250px;
  overflow: hidden;
  // display: flex;
  // flex-direction: row;
}

// #page-display {
// }

#slogan {
  margin-left: 133px;
  margin-top: -24px;
  font-size: 11px;
}

#toggle-signup-signin {
  display: flex;
  justify-content: center;
}

#show-signin-form-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#show-signup-form-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#authorization {
  display: flex;
  justify-content: center;
}

#brand-and-slogan {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
}
// #authorization {
//   display: flex;
//   justify-content: center;
// }

// .navbar {
//   position: fixed;
// }

.navbar-brand {
  font-size: 50px;
  // margin-top: -25px;
}

.dropdown-menu.show {
  display: flex;
  flex-direction: column;
  margin-left: 85vw;
  margin-top: -27px;
}

#message {
  font-size: 40px;
  /* fixed position a zero-height full width container */
  position: fixed;
  top: 40vh; /* or whatever position is desired */
  left: 20vw;
  right: 0;
  height: 0;
  /* center all inline content */
  text-align: center;
}

// #message {
//   font-size: 40px;
//   display: flex;
//   flex-direction: row;
//   justify-content: center;
//   align-content: center;
//   margin: auto;
// }

#change-password-form {
  position: absolute;
  display: flex;
  flex-direction: column;
  margin-left: -110px;
}

// #navbarSupportedContent {
//   display: flex;
//   justify-content: flex-end;
// }

#goals {
  width: 250px;
  height: 70vh;
  overflow: scroll;
}

.list-group-item {
  color: white;
  background: transparent;
  border-color: rgba(255, 255, 255, 0.2);
}

#goal-stuff {
  margin-top: -35px;
  padding: 20px;
  display: flex;
  flex-direction: column;
}

#show-steps {
  color: white;
  margin-left: 50px;
}

#page-display {
  // position: absolute;
  display: flex;
  flex-direction: row;
}

form {
  width: 250px;
}

#show-goal {
  padding: 5px;
}

#see-more {
  width: 1000px;
  margin-left: auto;
  margin-top: 50px;
}

// #my-goals {
//   display: flex;
//   justify-content: center;
//   font-size: 15px;
// }

section.container.border {
  padding: 10px;
}

// #forms {
//   position: absolute;
//   margin-left: 150px;
// }
// form {
//   width: 200px;
// }
#create-goal-form {
  display: flex;
  flex-direction: column;
  padding: 10px;
}

#signed-in-auth {
  padding-left: 20px;
  display: flex;
  flex-direction: column;
}

#empty-goals {
  display: flex;
  justify-content: center;
  margin-top: 15px;
}

// button {
//   max-width: 230px;
// }

// #buttons {
//   padding-left: 20px;
//   display: flex;
//   flex-direction: column;
// }

// p {
//   margin: 0;
// }

.form-control {
  margin: 0;
  // padding:0;
}
.col-6 {
  padding: 0;
}

// .goals {
//   // color: red;
// }

#steps-list {
  margin-left: 15px;
}
// #signed-in-as {
// }

// #checkbox {
//   display: flex;
//   margin-left: 200px;
//   margin-bottom: 5px;
// }

// .border {
//   border-radius: 50px;
//   padding: 25px;
//   margin: 25px;
// }

// #banner {
//   color: #ffec64;
// }

// .button {
//   box-shadow: inset 0px 1px 0px 0px #ffffff;
//   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
//   background-color: #ededed;
//   border-radius: 6px;
//   border: 1px solid #dcdcdc;
//   display: inline-block;
//   cursor: pointer;
//   color: #777777;
//   font-family: Arial;
//   font-size: 15px;
//   font-weight: bold;
//   padding: 6px 24px;
//   text-decoration: none;
//   text-shadow: 0px 1px 0px #ffffff;
// }
// .button:hover {
//   background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
//   background-color: #dfdfdf;
// }
// .button:active {
//   position: relative;
//   top: 1px;
// }

